force-app/main/default/objects/DBM_Data_Entry__c/DBM_Data_Entry__c.object-meta.xml
<CustomObject>
    <label>DBM Data Entry</label>
    <nameField>
        <label>DBM Data Entry Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DBM Data Entries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>