force-app/main/default/objects/DBM_Data_Entry__c/fields/Grouping_1__c.field-meta.xml
<CustomField>
    <fullName>Grouping_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Grouping 1</label>
    <referenceTo>DBM_Report_Grouping_Entry__c</referenceTo>
    <relationshipLabel>DBM Data Entries (Grouping 1)</relationshipLabel>
    <relationshipName>DBM_Data_Entries_Grouping_1</relationshipName>
    <type>Lookup</type>
</CustomField>