force-app/main/default/objects/DBM_Data_Entry__c/fields/Grouping_2__c.field-meta.xml
<CustomField>
    <fullName>Grouping_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Grouping 2</label>
    <referenceTo>DBM_Report_Grouping_Entry__c</referenceTo>
    <relationshipLabel>DBM Data Entries (Grouping 2)</relationshipLabel>
    <relationshipName>DBM_Data_Entries_Grouping_2</relationshipName>
    <type>Lookup</type>
</CustomField>