force-app/main/default/objects/DBM_Data_Entry__c/fields/Grouping_2_User__c.field-meta.xml
<CustomField>
    <fullName>Grouping_2_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Grouping 2 User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>DBM_Data_Entries1</relationshipName>
    <type>Lookup</type>
</CustomField>