force-app/main/default/objects/DBM_Data_Entry__c/fields/Report__c.field-meta.xml
<CustomField>
    <fullName>Report__c</fullName>
    <label>Report</label>
    <referenceTo>DBM_Report__c</referenceTo>
    <relationshipLabel>DBM Data Entries</relationshipLabel>
    <relationshipName>DBM_Data_Entries</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>